1999-05-11  Tim Jenness  <timj@jach.hawaii.edu>

	* Frame.pm (new): Allow base class to be used by sub-classes

	* Frame/JCMT.pm (new): Use the generic base class constructor

1999-05-10  Tim Jenness  <timj@jach.hawaii.edu>

	* Frame/MichTemp.pm: Major documentation update. Put all methods into
	alphabetical order.

	* Frame/UKIRT.pm: Major documentation update. Put all methods into
	alphabetical order. Remove header/uheader methods.

	* Frame/JCMT.pm: Major documentation update. Put all methods into
	alphabetical order. Remove header/uheader methods.

1999-05-09  Tim Jenness  <t.jenness@jach.hawaii.edu>

	* Frame.pm: Major documentation update. Put all methods into
	alphabetical order. Remove header/uheader methods.  

	* Group.pm: Major update of documentation. Put all methods into 
	alphabetical order. Remove header/uheader/members_ref and
	allmembers_ref and replace with hdr/uhdr/members/allmembers.

1999-05-07  Tim Jenness  <timj@jach.hawaii.edu>

	* Display/KAPVIEW.pm (newdev): No longer use $$ for GWM window name 

1999-05-06  Tim Jenness  <timj@jach.hawaii.edu>

	* Display/KAPVIEW.pm: Add COMP= to all displays

1999-04-29  Tim Jenness  <timj@jach.hawaii.edu>

	* Loop.pm (orac_sleep): Tidy up so that it simply uses DoOneEvent

1999-04-28  Tim Jenness  <timj@jach.hawaii.edu>

	* Basic.pm (orac_add_to_recipe): Fix ORAC_DEBUG lines so that they 
	dont get added for commented obeyw's

1999-04-22  Tim Jenness  <timj@jach.hawaii.edu>

	* Print.pm (orac_read): Add orac_read

	* Basic.pm: Allow -w in recipes. Fix some more warnings.

1999-04-21  Tim Jenness  <timj@jach.hawaii.edu>

	* Basic.pm (orac_parse_recipe): Place all primitives in their own
	block {_PRIMITIVE_}

	* Display.pm (display_data): Allow override of disp.dat with
	options hash

	* Basic.pm (orac_execute_recipe): Add recipe dump on error. Fix -w 
	warning

	* Index/Extern.pm (indexref): Fix -w warning

	* Print.pm: Fix -w warnings

1999-04-20  Tim Jenness  <timj@jach.hawaii.edu>
