@@ -1,5 +1,7 @@
 1999-05-11  Tim Jenness  <timj@jach.hawaii.edu>
 
+	* Index.pm: Tidy documentation and constructor
+
 	* Frame.pm (new): Allow base class to be used by sub-classes
 
 	* Frame/JCMT.pm (new): Use the generic base class constructor
